[gd_scene load_steps=6 format=3 uid="uid://doffv70n3gtg"]

[ext_resource type="Script" path="res://Events/Combat/combat.gd" id="1_ybk62"]
[ext_resource type="Texture2D" uid="uid://b85uxjtquc3e6" path="res://assets/background/Image.png" id="2_h257f"]
[ext_resource type="PackedScene" uid="uid://bqujqqi1dyhv5" path="res://Events/Combat/GUI/gui.tscn" id="3_nt121"]
[ext_resource type="PackedScene" uid="uid://vb70ep72ce87" path="res://Events/Combat/Hero/Hero.tscn" id="6_6yq6n"]
[ext_resource type="PackedScene" uid="uid://cmvw1gkyaj1ku" path="res://Events/Combat/Enemies/Enemy/Enemy.tscn" id="7_sojmv"]

[node name="Combat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ybk62")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00392157, 0.0901961, 0.109804, 1)

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 548.0
texture = ExtResource("2_h257f")

[node name="GUI" parent="." instance=ExtResource("3_nt121")]
layout_mode = 1

[node name="Hero" parent="." instance=ExtResource("6_6yq6n")]
position = Vector2(367, 353)
scale = Vector2(3, 3)
health = 20

[node name="Enemy" parent="." instance=ExtResource("7_sojmv")]
position = Vector2(813, 351)
scale = Vector2(3, 3)

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[connection signal="PhaseChange" from="." to="." method="_on_phase_change"]
